# ideas-neural-circuit-analysis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  container.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pull-request.yml
.ideas/: images_spec.json
.ideas/comb_comp_epochs__run_cc_epochs/: config.json  inputs.json  tool_spec.json
.ideas/combine_compare_correlation_data/: config.json  inputs.json  tool_spec.json
.ideas/combine_compare_peri_event_data/: config.json  (+2 more)
analysis/: comb_comp_epochs.py  combine_compare_correlation_data.py  combine_compare_peri_event_data.py  combine_compare_peri_event_data_across_epochs.py  combine_compare_population_data.py  combine_compare_state_epoch_data.py  compare_peri_event_activity_across_epochs.py  correlations.py  epoch_activity.py  output_registration.py  peri_event_workflow.py  population_activity.py  state_epoch_baseline_analysis.py
data/: Eventrate1.csv  Eventrate2.csv  Eventrate3.csv  Eventrate4.csv  Traces1.csv  Traces2.csv  Traces3.csv  Traces4.csv  cellset_accepted_cells_only.isxd  cellset_accepted_undecided_and_rejected_cells.isxd  cellset_series_annotations.csv  cellset_series_part2-PCA-ICA.isxd  cellset_single_accepted_cell.isxd  corr3.npy  corr4.npy  ideas_experiment_annotations.parquet  input_cellset-ED.isxd  single_event.h5
ideas/: io.py  measures.py  outputs.py  plots.py  utils.py  validation.py
inputs/: test
resources/: ideas_python-0.1.dev33+ga36bac998.d20251118-py3-none-any.whl  ideas_python-0.1.dev36+g004ae8a78.d20251118-py3-none-any.whl  ideas_python-0.1.dev36+g004ae8a78.d20251119-py3-none-any.whl  ideas_python-0.1.dev39+gd34af9b54.d20251119-py3-none-any.whl
tests/: conftest.py  test_cc_epochs.py  test_color_mapping_timeline.py  test_combine_compare_correlation_data.py  test_combine_compare_peri_event_data.py  test_combine_compare_peri_event_data_across_epochs.py  test_combine_compare_population_data.py  test_combine_compare_population_data_utils.py  test_combine_compare_state_epoch_data.py  test_compare_peri_event_activity_across_epochs.py  test_correlations.py  test_epoch_activity.py  test_peri_event_workflow.py  test_population_activity.py  test_preview_integration.py  test_state_epoch_baseline_analysis.py  test_svg_optimization.py
utils/: algorithms.py  combine_compare_population_data_utils.py  config.py  data_model.py  footprint_utils.py  metadata.py  plots.py  plotting_utils.py  population_data_validation.py  state_epoch_comparison_utils.py  state_epoch_data.py  state_epoch_output.py  state_epoch_results.py  statistical_formatting.py  statistical_validation.py  stats_utils.py  testing_utils.py  utils.py  validation.py  visualization_helpers.py
(+131 files in other folders)
