[project]
name = "ideas-neural-circuit-analysis"
description = "IDEAS Neural Circuit Analysis Toolkit"
requires-python = "==3.13.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "ideas-python[analysis]==1.0.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "scikit-learn==1.7.2",
    "scikit-image==0.25.2",
    "pingouin==0.5.5",
    "opencv-python==4.12.0.88",
    "statsmodels==0.14.5",
    "matplotlib==3.10.7",
    "plotly==6.5.0",
    "seaborn==0.13.2",
    "bokeh==3.8.1",
    "pyarrow==22.0.0",
    "h5py==3.15.1",
    "tifffile==2025.10.16",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "Pillow==12.0.0",
    "isx==2.1.0",
    "pynwb==3.1.2",
    "pynapple==0.10.1",
    "pytest==9.0.1",
    "beartype==0.22.6",
]

dynamic = ["version"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
